src/test/deca/context/valid/created/decl_class/sous_typage.deca
// Description :
//    affectation d'une sous_classe
//
// Resultats :
//		Ok

class B{}
class A extends B{
}
{
B b = new A();
}