src/test/deca/context/invalid/created/appel_meth/acces_field_comme_method.deca
// Description :
//   	appel d'une methode sur un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 14 : (3.71) Le champ n'est pas une méthode

class A {
int x;
}


{
A a = new A();
a.x();
}